--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -132,7 +132,7 @@
 \begin{figure}
  \centering
  \includegraphics[width=\textwidth]{../java_skeleton_generation/example_skeletons/bird.jpg}
- \caption*{Beispiel für ein Skelett, dass mit dem hier vorgestellten Algorithmus generiert werden kann. Als Hintergrund wurde \cite{background} verwendet.}
+ \caption*{Beispiel für ein Skelett, dass mit dem hier vorgestellten Algorithmus generiert wurde. Als Hintergrund wurde \cite{background} verwendet.}
 \end{figure}
 \blankpage
 
