--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -41,7 +41,7 @@ Zusätzliche Informationen zu Implementierungsdetails sind in Kapitel \ref{chapt
   \\
   \subfloat[generiertes Skelett]{\includegraphics[height=0.25\textheight]{../java_skeleton_generation/example_skeletons/4legs_groundPlane.jpg}}
   
-  \caption{(a - c) Für eine PCA annotierte Skelette. (d - f) Visualisierung der Ergebnise der PCA, (d) ist der Mittelwert der Beispiele, (c) und (e) entstehen jeweils, wenn die Koordinate für den Eigenvektor zum größten Eigenwert die entsprechende positive \bzw negative Standardabweichung annimmt. (g) Beispiel für ein generiertes Skelett (als Hintergrund wurde \cite{background} verwendet).}
+  \caption{(a - c) Beispiele für annotierte Skelette, die als Eingabe für die PCA verwendet wurden. (d - f) Visualisierung der Ergebnise der PCA, (d) ist der Mittelwert der Beispiele, (c) und (e) entstehen jeweils, wenn die Koordinate für den Eigenvektor zum größten Eigenwert die entsprechende positive \bzw negative Standardabweichung annimmt. (g) Beispiel für ein generiertes Skelett (als Hintergrund wurde \cite{background} verwendet).}
   \label{intro_pic}
  \end{figure}
 
