--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -83,8 +83,8 @@ Ein geeignetes Werkzeug hierfür ist die \emph{Principal Component Analysis} (si
   \item Die Anzahl der Paare von \emph{Beinen mit Bodenkontakt}. Hier werden sowohl Vorder- als auch Hinterbeine berücksichtigt. Außerdem werden nur Paare berücksichtigt, da ein Tier keine ungerade Anzahl von Beinen haben kann.\\
   Auch hier können, wie bei den \emph{Flügeln}, nur diskrete Werte in den Beispielen angenommen werden. Werte in $[0, 1]$ \bzw in $[1, 2]$ lassen sich aber wiederum als Wahrscheinlichkeiten dafür interpretieren, ob das Tier ein \bzw zwei Beinpaare hat.
   
-  \item Das ungefähre \emph{Gewicht} eines ausgewachsenen Exemplars der Tierart oder -gattung, zu dem das Skelett gehört, in Kilogramm. Dieses Merkmal wurde mitaufgenommen, da die tatsächliche Größe der Tiere nicht durch die Abbildungen dargestellt wird.\\
-  Hier wurden oft Angaben zum maximalen Gewicht der Tiere verwendet, da keine Angaben zum Durchschnittsgewicht zu finden waren. Teilweise gibt es auch verschiedene Tierarten einer Gattung, die unterschiedlich schwer werden können, deren Skelette aber, bei der Auflösung der hier erhobenen Daten, gleich aussehen. In diesem Fall wurde ein beliebiger Wert gewählt, der zwischen dem Gewicht der leichtesten und dem der schwersten Art liegt. (Die Quellen zu den Gewichten sind im Anhang \ref{appendix_pca_weight} zu finden.)
+  \item Das ungefähre \emph{Gewicht} eines ausgewachsenen Exemplars der Tierart oder -gattung, zu dem das Skelett gehört, in Kilogramm. Dieses Merkmal wurde mitaufgenommen, da die tatsächliche Größe der Tiere nicht durch die Abbildungen dargestellt wird. Dies bedeutet jedoch nicht, dass Skelette von kleinen Tieren durch einfache Skalierung in Skelette von großen Tieren übergehen (siehe Abschnitt \ref{bigAndSmall}).\\
+  Es wurden oft Angaben zum maximalen Gewicht der Tiere verwendet, da keine Angaben zum Durchschnittsgewicht zu finden waren. Teilweise gibt es auch verschiedene Tierarten einer Gattung, die unterschiedlich schwer werden können, deren Skelette aber, bei der Auflösung der hier erhobenen Daten, gleich aussehen. In diesem Fall wurde ein beliebiger Wert gewählt, der zwischen dem Gewicht der leichtesten und dem der schwersten Art liegt. (Die Quellen zu den Gewichten sind im Anhang \ref{appendix_pca_weight} zu finden.)
  \end{itemize}
 
  % Verweis auf Implementierungsdetails
