--- a/latex/skeleton_generation.tex
+++ b/latex/skeleton_generation.tex
@@ -186,7 +186,7 @@ Während die Bestandteile des Skeletts durch die Grammatik $G$ generiert werden,
 Die Positionen der meisten terminalen Bestandteile sind durch den Verlauf der Wirbelsäule festgelegt. Dieser Verlauf wird im Wesentlichen durch den gewählten Punkt $q$ im PCA-Raum bestimmt. Es kann jedoch sein, dass die Wirbelsäule, an den Punkten, an denen ihre Teile zusammenstoßen, nicht differenzierbar ist. In diesem Fall wird der Verlauf etwas angepasst (siehe Abschnitt \ref{section:smooth_spine}).\\
 Wirbel werden entlang der Wirbelsäule positioniert (näheres dazu in Abschnitt \ref{section:vertebrae_ribs}) und Rippen, Schulterblätter und Beckenknochen so, dass sie an den zugehörigen Wirbeln ansetzen. Der Schädel befindet sich am Ende der Halswirbelsäule. Kompliziertere Berechnungen werden nur zur Positionierung der Extremitäten gebraucht. Diese werden in Abschnitt \ref{section:extremity_generation} genauer ausgeführt.
 
-Die Länge der Knochen der Extremitäten ist durch $q$ festgelegt und die Länge der Wirbel ergibt sich durch ihre Positionierung auf der Wirbelsäule. Alle anderen Ausdehungen von terminalen Elementen sind relativ beliebig im Code festgelegt und sind bei jedem erzeugten Skelett gleich.
+Die Länge der Knochen der Extremitäten ist durch $q$ festgelegt und die Länge der Wirbel ergibt sich durch ihre Positionierung auf der Wirbelsäule. Alle anderen Ausdehungen von terminalen Elementen sind relativ beliebig im Code festgelegt und sind bei jedem erzeugten Skelett gleich. Hier besteht für zukünftige Arbeiten Gestaltungsspielraum. Beispielsweise könnte das erhobene Merkmal \emph{Gewicht} als Anhaltspunkt zur Bestimmung der Dicke der Knochen verwendet werden. Hier muss aber beachtet werden, dass die Dicke der Knochen sich nicht proportional zum Gewicht verändert (siehe Abschnitt \ref{bigAndSmall}). 
 
 
 \paragraph{Darstellung als Baum}
