--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -281,6 +281,16 @@
 % Procedural Generation %
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
+@techreport{perlinNoise,
+ author = {Burger, Wilhelm},
+ title = {Gradientenbasierte Rauschfunktionen und Perlin Noise},
+ institution = {School of Informatics, Communications and Media, Upper Austria University of Applied Sciences},
+ address = {Hagenberg, Austria},
+ number = {HGBTR08-02},
+ year = {2008},
+ url = {http://staff.fh-hagenberg.at/burger/}
+}
+
 @thesis{ProceduralCharacterGeneration,
  author = {Krogh, Robert},
  title = {Procedural Character Generation},
