--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -104,6 +104,7 @@ Die Bilder der Skelette wurden folgendermaßen für die Datenerhebung vorbereite
 
  Ist das geschehen kann die Lage der Wirbelsäule und die Länge der Knochen der Extremitäten annotiert werden.
  
+ \newpage
 Die Annotation der Bilder wurde per Hand mit dem Programm Inkscape \cite{inkscape} durchgeführt. Es kann verwendet werden um Vektorgrafiken zu erstellen und zu bearbeiten.\\
 Für jedes zu markierende Element wurde eine Strecke oder eine Bézierkurve eingefügt und mit einem vorher festgelegten Namen benannt. Diese Elemente wurden dann durch Inkscape als Pfade in der erzeugten svg-Datei gespeichert. Aus dieser Datei wurden dann automatisiert die eingetragenen Pfade mit ihren Koordinaten ausgelesen.
 
