--- a/latex/future_work.tex
+++ b/latex/future_work.tex
@@ -11,38 +11,29 @@
 
 \paragraph{Zusammenfassung}
 
-Das Ergebnis dieser Arbeit ist ein Algorithmus, der 3D-Modelle von Wirbeltierskeletten generieren kann, und eine Implementierung desselben. Die Informationen, auf deren Grundlage der Algorithmus arbeitet, sind annotierte 2D-Bilder von Wirbeltierskeletten, \zb aus Lehrbüchern der Zoologie. Mit Hilfe einer \emph{Principal Component Analysis} auf diesen Datenpunkten (siehe Kapitel \ref{chapter:pca}) erhält man eine Möglichkeit zufällig normalverteilte Punkte zu erzeugen, die der gleichen Verteilung folgen wie die Datenpunkte.
+Das Ergebnis dieser Arbeit ist ein Algorithmus, der 3D-Modelle von Wirbeltierskeletten generiert, und eine Implementierung desselben. Die Informationen, auf deren Grundlage der Algorithmus arbeitet, sind annotierte 2D-Bilder von Wirbeltierskeletten, \zb aus Lehrbüchern der Zoologie. Mit Hilfe einer \emph{Principal Component Analysis} auf diesen Datenpunkten erhält man eine Möglichkeit zufällig normalverteilte Punkte zu erzeugen, die der gleichen Verteilung folgen wie die Datenpunkte.
 Ein so erzeugter Punkt liefert alle Informationen, die nötig sind, um ein Skelett zu generieren.
 Diese Technik liefert ohne weitere Einschränkungen viele unterschiedliche Skelette, die in den allermeisten Fällen auch gut aussehen.\\
 Außerdem können gezielt Skelette mit bestimmten Eigenschaften generiert werden, indem die \emph{Principal Component Analysis} auf bedingten Verteilungen ausgeführt wird oder Variationen zu schon generierten Skeletten erzeugt werden. Dies ist sehr hilfreich, wenn man schon eine Vorstellung davon hat, wie das zu generierende Skelett ungefähr aussehen soll.
 
 Zusätzlich zu "`realistischen"' Wirbeltierskeletten lassen sich mit dem Algorithmus auch fantastische Skelette generieren. Es können zusätzliche Extremitäten und ein zusätzlicher Schultergürtel erzeugt werden.
 Die Datengrundlage bleibt jedoch die selbe. Es werden die gleichen Bilder von echten Wirbeltierskeletten verwendet.
-Deshalb wurde darauf geachtet, dass sich die generierten Skelette durch die genannten Veränderungen nicht zu stark von echten Wirbeltierskeletten entfernen.  
+Deshalb wurde darauf geachtet, dass sich die fantastischen Skelette durch die genannten Veränderungen nicht zu stark von echten Wirbeltierskeletten entfernen.  
 
-Eine kontextfreie Grammatik legt fest, welche Knochen generiert werden und wie die Baumstruktur des Skeletts aufgebaut ist.
+Eine kontextfreie Grammatik legt fest, welche Knochen generiert werden und wie das Skeletts aufgebaut ist.
 Diese Grammatik sorgt dafür, dass die Ersetzungsregeln relativ übersichtlich dargestellt und leicht erweiterbar sind. Da sie aber im Voraus, durch den zufällig erzeugten Punkt, schon so stark festgelegt wird, dass immer genau ein Wort generiert wird, ist sie nicht unbedingt notwendig.
 
-Die Positionierung der Beine liefert in vielen Fällen keine schönen Ergebnisse, da hierzu keine Informationen aus den 2D-Bildern erhoben werden. Trotzdem kann das generierte Skelett als erster Eindruck \bzw Inspiration für ein Modell dienen. Wenn das erzeugte Skelett die Grundlage für ein animiertes Wesen sein soll, muss die Positionierung der Knochen sowieso noch öfter angepasst werden.
+Die Positionierung der Beine liefert in vielen Fällen keine schönen Ergebnisse. Um das zu verbessern wären weitere Informationen, \zb aus den 2D-Bildern, notwendig. Trotzdem kann das generierte Skelett als erster Eindruck \bzw Inspiration für ein Modell dienen. Wenn das erzeugte Skelett die Grundlage für ein animiertes Wesen sein soll, muss die Positionierung der Knochen ohnehin noch öfter angepasst werden.
 
 
 \paragraph{Zukünftige Arbeiten}
 
+In zukünftigen Arbeiten könnte es sinnvoll sein die Datengrundlage, also die Auswahl an 2D-Skelettbildern, zu erweitern. Das Beispiel Mensch wurde \zb außen vor gelassen. Es könnte also getestet werden wie gut Skelette mit sehr aufrechter Wirbelsäule generiert werden können.\\
+Außerdem könnte das Merkmal \emph{Gewicht}, das hier zwar erhoben, aber nicht verwendet wurde, in die Generierung mit einfließen, \zb in die Dicke der Knochen. Hier sollte aber beachtet werden, dass das Gewicht der Tiere nicht proportional zu ihrer Knochendicke ist (siehe Abschnitt \ref{bigAndSmall}).
 
+Die Sammlung der verwendeten 3D-Modelle von Knochen lässt sich relativ leicht durch weitere \bzw alternative Modelle erweitern (siehe Abschnitt \ref{bone_models}). Um die Benutzung des Programms noch flexibler zu machen, könnte es so ergänzt werden, dass die zu verwendenden Knochenmodelle vom Benutzer selbst vorgegeben werden können.\\
+Um dem Benutzer noch mehr Kontrolle über die Generierung zu geben, könnte der Algorithmus auch interaktiv gestaltet werden. Die Generierung könnte \zb schrittweise erfolgen mit der Möglichkeit nach jedem Schritt einzugreifen. Oder es könnte die Möglichkeit geschaffen werden Skelettteile, die dem Benutzer nicht gefallen, neu zu generieren.
 
-
-
-\begin{itemize}
- \item schnell viele verschiedene Skelette generierbar, Variationen zu einem vorgegebenen Skelett, leicht bedienbar
-
- \item mehr Daten für PCA sammeln
- \item Erweiterung auf Mensch? Mensch auch als PCA Datenpunkt?
- \item austauschbare 3D-Modelle,  mehr verschiedene 3D-Modelle
- \item Gewicht in Algo verwenden
- 
- \item Interaktivität: Teile, die einem nicht gefallen, sollten geändert werden können (Eine Anwendung, bei der nach Eingabe von Parametern sofort das komplette Tier generiert wird, ist weniger hilfreich als eine, bei der schrittweise Teile davon generiert werden können (und auch rückgängig gemacht werden können))
- 
- \item Muskeln, Haut \etc anbauen (an 3D-Modell oder auch Algo erweitern)
-\end{itemize}
+Aufgrund der Zeitbeschränkung hat sich diese Arbeit auf die Generierung von Skeletten beschränkt. Es werden weder Muskeln noch Haut generiert. Es wäre aber eine Möglichkeit den hier vorgestellten Algorithmus damit zu erweitern. Dies würde einen noch plastischeren Eindruck des generierten Tieres liefern und bei der Modellierung von sehr wirklichkeitsnahen Wirbeltieren noch mehr Arbeit vereinfachen.
 
 
